# matrix_zugriff

./: .gitignore  Cargo.toml
benches/: benchmark.rs
src/: eingabe.rs  lib.rs  matrix.rs  test.rs  varianten.rs  varianten_1D.rs  varianten_2D.rs  zahlentyp.rs
src/ein_d_matrix/: basis_1d.rs  basis_laenge_1d.rs  slice_1d.rs  split_at_1d.rs
src/zwei_d_matrix/: basis_2d.rs  basis_laenge_2d.rs  iterator_2d.rs  unsicher_2d.rs
